# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/startup/init_lite/begetd.gni")
import("//build/ohos.gni")

ohos_shared_library("libcontrolfd") {
  sources = [
    "control_fd_client.c",
    "control_fd_service.c",
  ]
  include_dirs = [
    ".",
    "//third_party/bounds_checking_function/include",
    "//base/startup/init_lite/services/include",
    "//base/startup/init_lite/interfaces/innerkits/include",
    "//base/startup/init_lite/services/loopevent/include",
  ]
  deps = [
    "//base/startup/init_lite/services/loopevent:loopevent",
    "//base/startup/init_lite/services/utils:libinit_tools",
    "//base/startup/init_lite/services/utils:libinit_utils",
    "//third_party/bounds_checking_function:libsec_shared",
  ]
  deps += [ "//base/startup/init_lite/services/log:agent_log" ]
  part_name = "init"
  install_images = [ "system" ]
}

# For init only
ohos_static_library("libcontrolfd_static") {
  sources = [
    "control_fd_client.c",
    "control_fd_service.c",
  ]
  include_dirs = [
    ".",
    "//third_party/bounds_checking_function/include",
    "//base/startup/init_lite/services/include",
    "//base/startup/init_lite/interfaces/innerkits/include",
    "//base/startup/init_lite/services/loopevent/include",
  ]
  deps = [
    "//base/startup/init_lite/services/loopevent:loopevent",
    "//base/startup/init_lite/services/utils:libinit_tools",
    "//base/startup/init_lite/services/utils:libinit_utils",
  ]
  part_name = "init"
}
