# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/startup/init/begetd.gni")
import("//build/ohos.gni")

config("exported_header_files") {
  visibility = [ ":*" ]
  include_dirs = [
    "//base/startup/init/interfaces/innerkits/include",
    "//base/startup/init/interfaces/innerkits/control_fd",
  ]
}

ohos_static_library("libcontrolfd") {
  sources = [
    "control_fd_client.c",
    "control_fd_service.c",
  ]
  public_configs = [ ":exported_header_files" ]
  include_dirs = [
    ".",
    "//third_party/bounds_checking_function/include",
    "//base/startup/init/services/include",
    "//base/startup/init/services/loopevent/include",
  ]
  part_name = "init"
  subsystem_name = "startup"
}
