# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/ohos.gni")
service_file_sources =
    [ "//base/startup/init_lite/interfaces/innerkits/file/init_file.c" ]
service_file_include = [
  "//base/startup/init_lite/interfaces/innerkits/include",
  "//base/startup/init_lite/services/log",
  "//base/startup/init_lite/services/include",
  "//third_party/bounds_checking_function/include",
]

ohos_static_library("libfile_static") {
  sources = service_file_sources
  include_dirs = service_file_include
  deps = [
  "//base/startup/init_lite/services/log:agent_log",
  "//base/startup/init_lite/services/utils:libinit_utils",
  "//third_party/bounds_checking_function:libsec_static",
]
  part_name = "init"
}

ohos_shared_library("libfile") {
  sources = service_file_sources
  include_dirs = service_file_include
  deps = [
  "//base/startup/init_lite/services/log:agent_log",
  "//base/startup/init_lite/services/utils:libinit_utils",
  "//third_party/bounds_checking_function:libsec_shared",
]
  part_name = "init"
  install_images = [ "system" ]
}
