# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/ohos.gni")

# For init only
config("libfsmanager_exported_configs") {
  visibility = [ ":*" ]
  include_dirs =
      [ "//base/startup/init/interfaces/innerkits/include/fs_manager" ]
}

ohos_static_library("libfsmanager_static") {
  sources = [
    "fstab.c",
    "fstab_mount.c",
  ]
  include_dirs = [
    "//base/startup/init/interfaces/innerkits/include",
    "//third_party/bounds_checking_function/include",
    "//base/startup/init/services/log",
    "//base/startup/init/services/include",
    "//base/startup/init/services/param/include",
  ]
  if (defined(global_parts_info.startup_hvb)) {
    sources += [
      "dm_verity/dm_verity.c",
      "libfs_dm/fs_dm.c",
      "libfs_hvb/fs_hvb.c",
      "libfs_hvb/hvb_ops.c",
    ]

    include_dirs += [
      "//base/startup/init/interfaces/innerkits/fs_manager/libfs_dm/include",
      "//base/startup/init/interfaces/innerkits/fs_manager/libfs_hvb/include",
      "//base/startup/init/interfaces/innerkits/fs_manager/dm_verity/include",
      "//base/startup/hvb/libhvb/include",
      "//base/startup/init/ueventd/include",
    ]

    defines = [ "SUPPORT_HVB" ]

    public_deps = [ "//base/startup/hvb/libhvb:libhvb_static" ]
  }
  public_configs = [ ":libfsmanager_exported_configs" ]
  part_name = "init"
  subsystem_name = "startup"
}
